add: Relational Database project - Celestial Bodies Database

--- a/DataVisualization/05_TreemapDiagram/src/style.css
+++ b/DataVisualization/05_TreemapDiagram/src/style.css
@@ -103,17 +103,12 @@ button:focus-visible {
 }
 
 
-.svg-container {
+svg {
   border-radius: 15px;
   background: #44403C;
 
 }
 
-.svg-secondary {
-  background: #44403C;
-  border-radius: 15px;
-
-}
 
 
 .dot {
